--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
-  "name": "ufc-api",
-  "version": "1.0.0",
-  "description": "api for getting info about next fight of a fighter",
-  "main": "src/app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon dist/app.js\""
-  },
-  "author": "Anton Solyanick",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.14.9",
-    "nodemon": "^3.1.4",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.2"
-  },
-  "dependencies": {
-    "concurrently": "^8.2.2",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "puppeteer": "^22.12.1"
-  }
+    "name": "ufc-api",
+    "version": "1.0.0",
+    "description": "api for getting info about next fight of a fighter",
+    "main": "src/server.ts",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "tsc src/server.ts",
+        "dev": "concurrently \"npx tsc --watch\" \"nodemon ./dist/server.js\""
+    },
+    "author": "Anton Solyanick",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/express": "^4.17.21",
+        "@types/node": "^20.14.9",
+        "nodemon": "^3.1.4",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.5.2"
+    },
+    "dependencies": {
+        "concurrently": "^8.2.2",
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "mongodb": "^6.8.0",
+        "mongoose": "^8.4.4",
+        "puppeteer": "^22.12.1",
+        "slugify": "^1.6.6"
+    }
 }
