--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "express": "^4.19.2",
         "mongodb": "^6.8.0",
         "mongoose": "^8.4.4",
-        "puppeteer": "^22.12.1",
+        "puppeteer-core": "^24.6.1",
         "slugify": "^1.6.6"
     }
 }
