--- a/.github/workflows/parser.yml
+++ b/.github/workflows/parser.yml
@@ -24,4 +24,4 @@ jobs:
             - name: Run Parser
               run: |
                   npm install
-                  npx ts-node src/app.ts
+                  npx ts-node src/server.ts
