fix parser.yml (changed directory before run parser)

--- a/.github/workflows/parser.yml
+++ b/.github/workflows/parser.yml
@@ -29,4 +29,5 @@ jobs:
                   DATABASE: ${{ secrets.DATABASE }}
               run: |
                   npm install
-                  npx ts-node src/utils/parsersUfC.ts
+                  cd src/utils  
+                  npx ts-node parsersUfC.ts
