--- a/.github/workflows/parser.yml
+++ b/.github/workflows/parser.yml
@@ -1,10 +1,8 @@
 name: UFC Parser
 on:
     schedule:
-        - cron: '0 1 * * *' # Запуск каждый день в 03:00 по МСК
-    push:
-        branches:
-            - main # Срабатывает при push в main
+        - cron: '*/3 * * * *' # Запуск каждый день в 03:00 по МСК '0 1 * * *'
+
     workflow_dispatch: # Ручной запуск (опционально)
 
 jobs:
