fix parser.yml -6

--- a/.github/workflows/parser.yml
+++ b/.github/workflows/parser.yml
@@ -37,4 +37,4 @@ jobs:
                   DATABASE: ${{ secrets.DATABASE }}
               run: |
                   npm install
-                  npx ts-node src/server.ts
+                  npx ts-node src/utils/parsersUFC.ts
