--- a/package.json
+++ b/package.json
@@ -6,25 +6,39 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "npx tsc",
-        "dev": "concurrently \"npx tsc --watch\" \"nodemon ./src/server.ts\"",
+        "dev": "concurrently \"npx tsc --watch --preserveWatchOutput\" \"nodemon -r dotenv/config --watch src dist/server.js\"",
         "vercel-build": "echo hello"
     },
     "author": "Anton Solyanick",
     "license": "ISC",
     "devDependencies": {
-        "@types/express": "^4.17.21",
+        "@types/bcryptjs": "^3.0.0",
+        "@types/cookie-parser": "^1.4.8",
+        "@types/express": "^5.0.1",
+        "@types/html-to-text": "^9.0.4",
+        "@types/jsonwebtoken": "^9.0.9",
         "@types/node": "^20.14.9",
+        "@types/nodemailer": "^6.4.17",
+        "@types/pug": "^2.0.10",
+        "@types/validator": "^13.15.0",
         "nodemon": "^3.1.4",
         "ts-node": "^10.9.2",
-        "typescript": "^5.5.2"
+        "typescript": "^5.8.3"
     },
     "dependencies": {
+        "bcryptjs": "^3.0.2",
         "concurrently": "^8.2.2",
+        "cookie-parser": "^1.4.7",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "html-to-text": "^9.0.5",
+        "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.8.0",
         "mongoose": "^8.4.4",
+        "nodemailer": "^6.10.1",
+        "pug": "^3.0.3",
         "puppeteer-core": "^24.6.1",
-        "slugify": "^1.6.6"
+        "slugify": "^1.6.6",
+        "validator": "^13.15.0"
     }
 }
