--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "license": "ISC",
     "devDependencies": {
         "@types/bcryptjs": "^3.0.0",
+        "@types/compression": "^1.7.5",
         "@types/cookie-parser": "^1.4.8",
         "@types/express": "^5.0.1",
+        "@types/hpp": "^0.2.6",
         "@types/html-to-text": "^9.0.4",
         "@types/jsonwebtoken": "^9.0.9",
         "@types/node": "^20.14.9",
@@ -27,10 +29,15 @@
     },
     "dependencies": {
         "bcryptjs": "^3.0.2",
+        "compression": "^1.8.0",
         "concurrently": "^8.2.2",
         "cookie-parser": "^1.4.7",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "express-mongo-sanitize": "^2.2.0",
+        "express-rate-limit": "^7.5.0",
+        "helmet": "^8.1.0",
+        "hpp": "^0.2.3",
         "html-to-text": "^9.0.5",
         "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.8.0",
@@ -39,6 +46,7 @@
         "pug": "^3.0.3",
         "puppeteer-core": "^24.6.1",
         "slugify": "^1.6.6",
-        "validator": "^13.15.0"
+        "validator": "^13.15.0",
+        "xss": "^1.0.15"
     }
 }
