--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "main": "src/server.ts",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "npx tsc",
-        "dev": "concurrently \"tsc -w\" \"nodemon --delay 2.5 -r dotenv/config dist/server.js\"",
+        "build": "tsc && copyfiles src/**/*.pug dist",
+        "dev": "concurrently -k \"tsc -w\" \"nodemon --delay 2 -r dotenv/config dist/server.js\"",
         "vercel-build": "echo hello"
     },
     "author": "Anton Solyanick",
@@ -23,6 +23,7 @@
         "@types/nodemailer": "^6.4.17",
         "@types/pug": "^2.0.10",
         "@types/validator": "^13.15.0",
+        "copyfiles": "^2.4.1",
         "nodemon": "^3.1.4",
         "ts-node": "^10.9.2",
         "typescript": "^5.8.3"
