--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,26 @@
 {
-    "rewrites": [
+    "version": 2,
+    "builds": [
         {
-            "source": "/(.*)",
-            "destination": "/api"
+            "src": "server.ts",
+            "use": "@vercel/node",
+            "config": {
+                "includeFiles": [
+                    "src/**/*.ts",
+                    "models/**/*.ts",
+                    "routes/**/*.ts",
+                    "package.json",
+                    "tsconfig.json",
+                    ".env"
+                ]
+            }
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "server.ts",
+            "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
         }
     ]
 }
