--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,6 @@
     "functions": {
         "server.ts": {
             "runtime": "nodejs18.x",
-            "handler": "server.ts",
             "memory": 1024,
             "maxDuration": 30,
             "includeFiles": [
@@ -17,20 +16,27 @@
                 "routes/**/*.ts",
                 "config/**/*.ts",
                 "package.json",
-                "tsconfig.json"
+                "tsconfig.json",
+                ".env.local"
             ]
         }
     },
     "routes": [
         {
             "src": "/api/(.*)",
-            "dest": "server.ts",
+            "dest": "/server.ts",
             "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
         },
         {
             "src": "/(.*)",
-            "dest": "server.ts"
+            "dest": "/server.ts"
         }
     ],
-    "regions": ["fra1"]
+    "regions": ["fra1"],
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/server.ts"
+        }
+    ]
 }
