--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "tsc && copyfiles src/**/*.pug dist",
-        "dev": "concurrently -k \"tsc -w\" \"nodemon --delay 2 -r dotenv/config dist/server.js\"",
-        "vercel-build": "tsc && vercel-build"
+        "dev": "concurrently -k \"tsc -w\" \"nodemon --delay 2 -r dotenv/config dist/server.js\""
     },
     "author": "Anton Solyanick",
     "license": "ISC",
