--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@types/bcryptjs": "^3.0.0",
         "@types/compression": "^1.7.5",
         "@types/cookie-parser": "^1.4.8",
+        "@types/cors": "^2.8.18",
         "@types/express": "^5.0.1",
         "@types/hpp": "^0.2.6",
         "@types/html-to-text": "^9.0.4",
@@ -32,6 +33,7 @@
         "compression": "^1.8.0",
         "concurrently": "^8.2.2",
         "cookie-parser": "^1.4.7",
+        "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "express-mongo-sanitize": "^2.2.0",
