--- a/.github/workflows/keep-alive.yml
+++ b/.github/workflows/keep-alive.yml
@@ -17,7 +17,7 @@ jobs:
 
               run: |
 
-                  curl -sSf "https://ufc-api-7z3p.onrender.com" \
+                  curl -X GET "https://ufc-api-7z3p.onrender.com" \
 
                     --max-time 5 \
 
