--- a/.github/workflows/keep-alive.yml
+++ b/.github/workflows/keep-alive.yml
@@ -2,7 +2,7 @@ name: Keep Render REST API Alive
 
 on:
     schedule:
-        - cron: '*/6 * * * *' # Каждые 6 минут (GitHub позволяет)
+        - cron: '*/6 * * * *' # Каждые 6 минут
 
     workflow_dispatch:
 
@@ -10,12 +10,7 @@ jobs:
     ping:
         runs-on: ubuntu-latest
 
-        timeout-minutes: 2
-
         steps:
             - name: Ping API
               run: |
-                  curl -X GET "https://ufc-api-7z3p.onrender.com" \
-                    --max-time 5 \
-                    --retry 1 \
-                    --write-out "Status: %{http_code}\n"
+                  curl -X GET "https://ufc-api-7z3p.onrender.com"
